--- a/hell/Form2.resx
+++ b/hell/Form2.resx
@@ -344,7 +344,7 @@
         QLzzn//Z
 </value>
   </data>
-  <data name="picturegoblin2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureGoblin2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOwAAADsCAIAAAD4sd1DAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAA/7JJREFUeF5cvQV0G9fahuv//Oec9jQxyZZFFksWM7NsmZmZmVlmZood22Fw2GHm
