--- a/hell/Form3.resx
+++ b/hell/Form3.resx
@@ -117,4 +117,230 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonEquip.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUAAAADwCAIAAAD+Tyo8AAAABGdBTUEAALGPC/xhBQAAAAd0SU1FB+gF
+        Ghc1MrIILQcAAAAXdEVYdFNvZnR3YXJlAEdMRFBORyB2ZXIgMy40cYWk4QAACV5JREFUeF7t101y5DYQ
+        BWGHLzFe+Vq+u09jOHpCo0mp/0gQqAdkxLdskVUgcqE//vnxl6RQBiwFM2ApmAFLwQxYCmbAUjADloIZ
+        sBTMgKVgBiw99/e/fwJ+MIsBS08g3c/wy/EMWHoExX6F3w9mwNJdaPUe/NVIBix9D5U+hT8fw4AlQpmv
+        w3MGMGDpN2jyADzwUgYs/YIUD8Njr2PA0k+I8Dw8/woGrN2huu7wur4MWFtDbNfBe3sxYO0IdQ2DMc4z
+        YG0HUU2BkQ4zYG0EFc2F2Y4xYO0C/VSACQ8wYC0OzVSDad9lwFoZaqkJM7/FgLUsdFIZJn+dAWs1aCMF
+        tniRAWsdSCIO1nmFAWsRiCEUlnrKgJUNASwACz5mwEqFe78SbPqAASsSbvxisOwDBqwkuOgLw+L3GLAy
+        4H4vD+vfY8AKgMu9A5zAPQas6nCzd4ATeMCAVReu9SZwCI8ZsIrCtV4e1n+RAasWXOtN4BBeZ8CqAnd6
+        EziEdxmwSsC13gFO4BgD1mS41jvACZxhwJoJN3tt2L0LA9YcuNxrw+4dGbAmwP1eGBbvzoA1Gq74qrD1
+        RQxY4+CKLwkrX82ANQgu+mKw7DAGrMvhrq8Em45nwLoWbvxKsOkUBqxr4dIvAAvOZcC6Cu79GrDjdAas
+        /nDpF4AF6zBgdYarvwAsWIoBqydc/QVgwWoMWN3g6kfDamUZsPpAANGwWmUGrLNw+6NhtfoMWKcggGhY
+        LYIB6zgEEA2rpTBgHYQAQmGpOAasI5BBKCyVyID1HjSQC3uFMmC9AQ2EwlLRDFivQgahsFQ6A9ZzaCAX
+        9lqAAesJNBAKSy3DgPUIMgiFpVZiwLoLGeTCXisxYH0PDeTCXosxYH0DDeTCXusxYBEaCIWlVmXA+g0y
+        CIWlFmbA+gkN5MJea6sY8J5fYq6PM4+GpXZQLmA/yXg481BYahOFAsb3uMFv1B0OPBf22kSVgPExbvAb
+        dYcDz4W99lEiYHyMz/BLdYSjzoW9tjI5YHyJr/B79YJzDoWlNjQtYHyJB/CHOg8nHApL7WlCwPgMT+HP
+        dRKONxf22tPogPENXoEn6AycbS7sta0RAePoD8ADdQxONRSW2tzlAeP0j8EzdQCONBSW0oUB4+hPwsP1
+        FhxmKCylpn/AOPRe8Ba9DicZCkvppnPAOPS+8C69AmcYCkvpQ5+AcdwXwUv1FA4wFJbSZ2cDxllfDW/X
+        Azi6XNhLn50KGAc9AAbQPTi3XNhLcDBgnPJImERf4cRyYS99dSRgnPJ4mEeA4wqFpfSttwPGKU+BkfQZ
+        zioUltI97wWMU54Ig+kGpxQKS+mBNwLGKU+H8dTgiBJhIz1mwIvA4YTCUnoqOOAGE24LxxIKS+kVqf8D
+        f8CEe8KZJMJGetF7ATc49+kw3oZwIKGwlF70dsANjn46jLcVHEUoLKXXrRBwgwn3gXOIg3X0riMBN/gM
+        02G8TeAQ4mAdHXAw4AYfYzqMtzysnwgb6YDjATf4HtNhvLVh9zhYR8csFXCDCVeFrbNgF51xKuAG36YC
+        TLge7BsH6+iMswE3+DwVYMLFYNks2EUnrRlwgyGXgTWDYBF10SHgBp+qCAy5ACyYBbuoiz4BN/haRWDI
+        dNguCBZRL90CbvDNisCQubBXECyijnoG3ODLFYEhQ2GpFNhCfXUOuMH3qwATJsJGKbCFutsi4AZDxsE6
+        KbCFuusfcIOvWASGDIJFUmALXeGSgBt8yyIwZASsEAEr6DpXBdzgoxaBIevD/BGwgq5zYcANvmsRGLIy
+        TB4BK+hSBlwXxo6AFXS1awNu8IGLwJA1Yeb6ML8GuDzgBp+5CAxZEAYuDsNrjBEBN/jYFWDCajBtfZhf
+        YwwKuMH3LgJDFoEh68P8GmZcwA2+ehEYsgJMWBkm12BDA27w+SvAhNNhvOIwvAYz4P9hyLkwW2WYXOON
+        DrjBJSgCQ86CqSrD5JpiQsANrkIFmHAKjFQZJtcscwJucCEqwITjYZ6yMLYmmhZwg2tRASYcDMPUhJk1
+        18yAb3A/psN4w2CMsjC25jLgb2DCATBAWRhb080PuMEtmQ7jDYABCsLAKsKA78KQ18F7a8LMKqJEwA2u
+        SwWY8CJ4aU2YWXVUCfgG92Y6jHcFvLEgDKxSDPgJTNgX3lUQBlY1tQJucIGmw3h94V3VYFoVVC7gBtdo
+        OozXC95SDaZVTRUDbnCZpsN4XeAV1WBa1VQ04Ab3aS7Mdh6eXw2mVVl1A25wq+bCbCfh4aVgVFVmwG/A
+        eIfhsaVgVBVXOuAG12suzHYYHlsH5lR9BvwejHcAHlgH5lSE6gE3uGfTYby34FF1YE6lCAj4BhduIgz2
+        FjyqCAypIAZ8EMZ7BZ5QB+ZUkJiAG1y7uTDbU/jzOjCnsiQF3ODyzYXZHsPfFoEhFceAT8F49+CvisCQ
+        ShQWcINbOBdm+xb+pAgMqVB5Ad/gOs6F2QA/rgATKpcB94HxPuBnFWBCRUsNuMG9nAuz3eA3FWBCpQsO
+        uMHtnAuzNfjBdBhPCzDgnsqOh8G0jOyAG9zUuWoO9nkqLSY+4Ab3da5qU33MoyWtEPANLu4speb5GEar
+        MuDOigzzcSxa2zoBN7jEO8PJaFVLBdzgHu8JZ6KFrRZwg9u8FRyFlrdgwA2u9SZwCNrBmgE3uNxrw+7a
+        hwFnw9bazbIBN7jr68G+2pABp8Ky2tPKATe49MvAmtrW4gE3uPoLwILa2foBNwggF/aStgi4QQmJsJHU
+        7BJwgx6CYBHpw0YBNwijPswvwV4BNyikMkwufbVdwA06KQgDS/fsGHCDYErBqNIDmwbcIJsKMKH01L4B
+        N+hnLswmvWLrgBtUNB7mkd6ye8ANihoGY0gHGPD/kNYAGEA6xoB/QmAXwUulkwz4F8TWF94ldWHAv0F1
+        veAtUi8GTGjvDDxZ6s6ACREeg2dKFzHgb6DGd+Fp0nUM+C5k+Qo8QbqaAT+CPu/BX0nDGPBzyBXwY2kk
+        A34Vum3wA2k8A5aCGbAUzIClYAYsBTNgKZgBS8EMWApmwFIwA5aCGbAUzIClYAYsBTNgKZgBS8EMWApm
+        wFIwA5aCGbAUzIClYAYsBTNgKZgBS8EMWApmwFIwA5aCGbAUzIClYAYsBTNgKZgBS8EMWApmwFIwA5aC
+        GbAUzIClYAYsBTNgKZgBS8EMWApmwFIwA5aCGbAUzIClYAYsBTNgKdaPv/4DxajYn66PROMAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="buttonDiscard.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUAAAADwCAIAAAD+Tyo8AAAABGdBTUEAALGPC/xhBQAAAAd0SU1FB+gF
+        Ghc2J/T4mi8AAAAXdEVYdFNvZnR3YXJlAEdMRFBORyB2ZXIgMy40cYWk4QAACgBJREFUeF7t2GFuJLkN
+        QOEgQM6we7PcPadJDWrR630e21XVokRSD/h+DdpNtqSHRfKv//7xp6SiDFgqzIClwgxYKsyApcIMWCrM
+        gKXCDFgqzIClwgxYKsyApcIMWCrMgKXCDFgqzIClwgxYKsyApcIMWCrMgKXCDFgqzIClwgxYKsyApcIM
+        WCqsecD/+/d/8C9SJ20DPtK1XrXXMGDT1T66BWy62kqfgP0PrzbUIWDT1bbKB3zWC/iM1FXtgNHt6fz3
+        jx+TuioZ8MdcP8OHpcaKBYxWv4K/kroqEzAS/RH+XGope8DI8jp8j9RS0oBR4zP4TqmfjAGjw8fwtVI/
+        uQJGge/D90vNJAoY7Y2CKVInKQJGcmNhltRJ/4APGCe1sT5gxBYBE6U2tgj4gKFSDwYsFbbF/wY+YajU
+        gAFLhaUI+IDYgmCoVF2WgA+ILQImStUlCviA3iJgolRaroAP6C0CJkp1pQv4gN4iYKJUVMaAD+gtAiZK
+        FSUN+IDegmCoVEvegA+ILQiGSoWkDviA2IJgqFRF9oAPiC0IhkolFAj4gNiCYKiUX42AD4gtDuZKmZUJ
+        +IDS4mCulFalgE+ILQ7mSgnVC/iA0oJgqJRQyYAPiC0IhkrZVA34gNjiYK6UR+GADygtDuZKSdQO+IDS
+        4mCulEH5gA8oLRqmSwt1CPiEzEJhtLRKn4APyCwURktLGPBzmC7N1yrgAxqbAAtIM3UL+IDAJsAC0jQN
+        Az6hsWiYLs3RNuADGpsAC0jROgd8QmPRMF0K1T/gAxoLhdFSqC0CPiCzaJguBdkl4AMamwALSMNtFPAB
+        gU2ABaSx9gr4hMZCYbQ01o4Bn1BaKIyWRtk34AMyi4bp2tbA97B1wIdXXXNguvY08DHsHvDhVdcEGK0N
+        jX0MBvzL60znwHTtY/gzMOC/fDzZCTBdmxj+DAz4bzjcaJiu9vAADvjAAwZMOOJomK6ucO8nfOYBA/4N
+        nHI0TFdLuPQXfOwuA/49nPIEWEBt4KIBH77LgL+Ds46G6WoAV/wZPn+XAf8Axx0N01UaLvcr+KtbDPhn
+        OO5QGK26cLPfwB/eYsBX4dDjYK5qwW1egW+4xYBvwLmHwmiVgEu8Dt9znQHfhqOPg7lKDtd3C77qOgN+
+        AqcfCqOVDe7rGXzndQb8EC4gFEYrCVzTO/DN1xnwW3ANcTBXy+GC3oQvv86A34WbiIO5WgX3MgRGXGfA
+        A+AyQmG0ZsJdjIVZFxnwGLiMUBitOXALw2HcRQY8Eq4kDuYqFA5/LMy6y4AHw/WEwmgNhwMfDuMeMODx
+        cEmhMFpD4JAjYOJjBhwCtxUKo/UOnG0ETHyTAUfBtYXCaD2AIw2Coe8z4Fi4v1AYrYtwjEEwdBQDDoeL
+        DIXR+hEOMAiGDmTAM+A6Q2G0voJzC4KhwxnwPLjaOJirFxxUHMyNY8BT4ZrjYK5wPqEwOpQBz4bLDoXR
+        e8KZxMHcOQx4Ddx9HMzdCo4iFEZPY8DL4AWEwuj28PPjYO58BrwYHkQczO0KvzoO5q5iwOvhZcTB3E7w
+        S0Nh9FoGnAKeSCiMrg6/Lg7mJmHAieDFxMHcovCj4mBuKgacC55OKIwuBD8kCIbmZMDp4BmFwujksHwc
+        zM3MgJPCk4qDuTlh51AYnZwB54WHFQqjk8CSoTC6CgPODu8sDuYuh/XiYG4tBlwAHlwczF0CK0XD9HIM
+        uAy8vDiYOxM2CYKhpRlwJXiIcTA3GqaHwujqDLgevMg4mBsBE0NhdA8GXBKeZiiMHgiD4mBuJwZcGJ5p
+        KIx+B745Dua2ZMC14clGw/S78G2hMLorAy4PD3cO7PAN/OEEWKA3A+4AL3garHHCZ6bBGpsw4D7woPeB
+        c9iKAbeCl90efv6GDLgbPPGW8JN3ZsA94cW3gZ8pA+4Mr786/DodDLg5NFAOfo7AgPtDEoXgh+gzA94F
+        2kgOy+srBrwXdJIKVtUVBrwXNJMH9tRFBrwdlLMWdtNdBrw15DQTNtEzBrw7dDUBFtA7DFhTG8ZovcmA
+        9Qsyi4CJGsKAd4fMImCiBjLgfSGzCJio4Qx4R8gsDuZqOAPeCOqaBmtoIAPuDzmtgq00hAG3hX4ywIZ6
+        nwG3gmASwsJ6kwE3gU6Sw/J6zIBrQxiF4IfoGQMuCTFMEDT044/SAwZcDAKYKWj6x1+nuwy4DLz7+eJ2
+        +PgzdYsBZ4e3vlboSq+frOsMOC+877Xm7IYp+pEBZ4RnvRZ2e8HHBsIgfcOAE8E7Xg7rfYbPD4RB+ooB
+        p4DnmwE2/Ar+aizM0mcGvBiebAbY8Ef487EwS2DAa+CZJoElr8P3DIdxejHg2fA0k8CSD+ALh8M4nQx4
+        HrzIPLDnY/jaCJgoA54EDzEJLPk+fH8ETNycAYfD+0sCS46FWREwcVsGHAhvLgksGQRDI2Dingx4PLyz
+        PLBnNEwPgqG7MeCR8LbywJ7TYI0gGLoVAx4GryoJLDkf9omDuZsw4AHwkpLAkgthsTiYuwMDfgseUBJY
+        MgNsGAdz2zPgh/BuMsCG2WDbOJjbmwHfhueSATZMC2uHwuiuDPgevJLlsF5+2D8URrdkwJfgZWSADQvB
+        D4mG6c0Y8A/wGjLAhhXhF0XD9E4M+Et4BBlgw9Lw06JhehsG/Bu4+wywYRv4mXEwtw0D/gfc+nJYryX8
+        5DiY24MB/w33vRZ2aw8/Pw7mVmfAv+CO18Jum8AhRMP0unYPGPe6FnbbDU4jGqYXtW/AuM6FsNjOcDLR
+        ML2iHQPGLS6ExXTAEUXD9HK2Cxj3twq2EuC4QmF0LRsFjGtbAivpGzi6UBhdyBYB47aWwEq6AmcYDdNL
+        aB4wbmgVbKVbcJihMDq/tgHjYlbBVnoGpxoHc/NrGDCuZBVspTfheONgbnKtAsZNrIKtNArOORRGp9Un
+        YFzAElhJw+HAQ2F0Th0CxrnPh30UCocfCqMTqh0wjnsJrKQ5cAuhMDqVwgHjlCfDMloClxIEQ1MpGTDO
+        dz7so1VwL3EwN49iAeNY58M+Wg4XFARD86gUMM50MiyjVHBZw2FcHgUCxlHOh32UFi5uFExJJXvAOMrJ
+        sIzyww2+D9+fTeqAcZSTYRkVgqt8DF+bUN6AcZTTYA0VhWt9AF+YU8aAcY4zYRNVh/u9Dt+TlgH/BTuo
+        DVz0FfiGzNIFjKOcAAuoJVz6N/CHye0eMKarN9w+4MMl7Bsw5moreAwnfKaE1AF//pdRXuO0swbvIeP/
+        ifVbr7N+E75WKq1MwC8I8hZ8lVRdvYBPKPMKfIPUQNWAT0j0e/hbqYHaAZ8Q6m/hT6QeOgR8QrGAD0s9
+        9An4hG5P+IzURreAXwxYO2gb8MmA1VvzgKXeDFgqzIClwgxYKsyApcIMWCrMgKXCDFgqzIClwgxYKsyA
+        pcIMWCrMgKXCDFgqzIClwgxYKsyApbL++PP/fXfTl8MqdDQAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="buttonPlayAgain.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUAAAADwCAIAAAD+Tyo8AAAABGdBTUEAALGPC/xhBQAAAAd0SU1FB+gF
+        GhczNuM/TpgAAAAXdEVYdFNvZnR3YXJlAEdMRFBORyB2ZXIgMy40cYWk4QAAClFJREFUeF7t2E2OKzkO
+        ReHeRdWmelz7n9UmGuhI2Ag/nPyTI0SJlA7wTRKwzSuJd5L/+eevvyUVZYGlwiywVJgFVk///u+/gA+o
+        LwusntDe7+BbuswCqzN0tQV+Qe0ssDpDOd+Cn9KvLLD6Qy0vw8/qMwusEKjiTfhxnSywQqCBXWCEDhZY
+        IdC9jjBocxZYUVC8CJi4IQusKChbKIzehwVWFHQsGqZvwgIrEDo2BjKszQIrEKo1EpKsygIrEEo1BSIt
+        xgIrELo0EYItwwIrFoo0F7ItwAIrFiqUARKWZoEVC+XJAzmLssCKhdrkgZxFWWDFQm3yQM6iLLDCoTlJ
+        IGRRFnh90xcXATJAwros8MqwtSd8LBqmT4d4pVngZWFrAR8OhdHTIV5pFnhB2Nfv4FtxMHcuZKvOAi8F
+        y/ozfDcURs+CVAuwwOVhR9+Cn4qDuVMg0hoscFXYzsvws0EwdDzkWYYFrgHr2BEGBcHQ8ZBnGRZ4MuzZ
+        FIgUAROnQKQ1WOChsFJ5IGd3GDcRglVngWNhe9JC7AiYOBGClWaBo2Bp8kP+7jBuOsQrygJ3hi0pBAfp
+        DuMyQMKKLHA3WI6KcKK+MCsP5KzFAneAhagL5+oLs1JB1EIs8C3YgPPPus6jdYdBCSFwCRb4Irz9MnDM
+        jjAoLcROzgK/De+9Hpy3IwxKC7Ezs8Ct8MYLw8E7wqDkED4nC/w7vOvycPyOMCg/5E/IAn8Lb7kVXEUv
+        mFICjpCNBSa8X37I/yt8/Uv4Si+YUggOkocFfsGbpYXYN+HHH/CZXjCl3c2vd3GeIhULvGlvPxswDiNa
+        4Bce8JlhECODfQuMt0kIgccInX7+eAt8F/DhkZBkrk0LjCdJBVHHC41xHvMH+Mp38K2RkGSiHQuMx8gD
+        OSeKy3Me9jv4/K/w9WEQY5aNCowHyAM5kwjKdp76S/hwO/zOGMgwxS4FxtVngITZBIU8j/8ZPnkBfnAA
+        BBhviwLj0qdDvJyCop6XAPjYHfjlaJg+2OIFxl1Ph3iZxQU+b+OED3SBEaEweqSVC4xbngvZdjbyZjAr
+        DuYOs2yBcb+zIJUOg+/nz3GhMHeMNQuMm50CkXQafEXnuAEweoAFC4w7nQKRBINv6XyXATA62moFxm1O
+        gUhKAs8UBEOjLVVgXOV4yKNs8F5BMDTUOgXGJQ6GMMoJrxYHc+MsUmBc30hIouTwfHEwN8gKBcbFjYQk
+        KgGPGAdzI5QvMK5sGMRQIXjKOJgboXaBcV/DIIbKwYPGwdzuChcYNzUGMqgoPGsojO6raoFxR2Mgg0rD
+        48bB3L4scCsEUHV43ziY21fJAuOCBkAArQGvHAdzO6pXYFzNAAigZeChQ2F0L8UKjEuJhulaD148Dub2
+        YoG/hdFaEh49FEZ3UanAuI5QGK1V4d1DYXQXFvgLmKu14fVDYfR9ZQqMi4iDuVoeFiAURt9ngV8wUZvA
+        GkTD9JtqFBhXEARDtQ9sQiiMvqlAgXH+CJio3WAfomH6HdkLjJNHwERtCCsRDdPvSF1gHDsIhmpP2Ipo
+        mH7Z7gXGRG0LixEN0y/LW2AcOAImamfYjQEQ4JqkBcZRI2CiNof1GAABrslYYJwzAiZKByxJNEy/xgJL
+        T1iSARDggnQFxgkjYKL0gD0ZAAEusMDSE/ZkAAS4IFeBcbwImCidsCpjIMO7EhUYB4uAidKfsC1jIMO7
+        LLD0goUZAAHetVGBMU76DDszBjK8JUuBcaQImCh9hp0ZAxneskuBMU76EtZmDGR4iwWWXrA2wyBGuxQF
+        xmEiYKL0JazNMIjRzgJLL1ibYRCj3RYFxjjpO9icYRCjnQWWXrA5wyBGOwssvWBzhkGMdvMLjJNEwETp
+        O9ickZCkkQWWXrA5IyFJIwssvWBzRkKSRhZYesHmjIQkjSyw9ILNGQlJGk0uMM4QBEOl72BzRkKSRhZY
+        esHmjIQkjdYvMCZKP8DyjIQkjSyw9ITNGQ95Wlhg6QmbMx7ytLDA0hM2ZzzkaeE/saQnrM14yNPCAktP
+        WJvxkKeFBZaesDbjIU8LCyw9YW3GQ54WFlh6wtqMhzwtLLD0hLUZD3laWGDpA3ZmCkRqYYGlD9iZKRCp
+        xRYFPmCuBFiYKRCphQWWPmBhpkCkFhZYStHeA1K1sMCSBb4KBwiF0dIJqzIFIjWywJIFvgpnCIXR0gP2
+        ZBakarRRgQ+YLh2wJLMgVSMLrN1hSWZBqkaTC3zAMUJhtHTAksyCVI32KvAB07U5rMdECNbIAmtrWI9Z
+        kKrddgU+IIB2ht2YBanaWWDtC4sxEYK127HAB2TQnrAVsyDVW+YX+IDzjIEM2g32YSIEe4sF1qawDxMh
+        2Fv2LfABMbQPbMJcyPaWrQt8QBLtADswF7K9ywIzjNaGBZgO8d6VosAHnGowhNHC8PRzIdsFFvgDwmhV
+        ePfpEO8CC/yEPFoSHn06xLvAAr8gkhaD584ACS/IUuADzjYFImkleOvpEO+aRAU+4IRTIJLWgFfOAAmv
+        scBfQCpVh/dNAiGvscDfQjYVhWdNAiEvs8A/QTxVhDdNAiEvy1XgA845HeKpEDxlHsh5hwX+HRKqCrxj
+        Hsh5R7oCH3DaJBBSyeH5UkHUOyzwG5BTOeHVskHamzIW+IAzp4KoSgWPlRAC32SBL0JgZYA3SgiB70ta
+        4ANOnhACay68Tk7IfF/eAh9w+JyQWePhRdJC7C4scB9IrjHwCskhfBepC3zAFSSH8IqDm88P+XvJXuAD
+        LqIEHEG94J4LwUF6KVDgA+6iCpxCl+FiK8KJerHAg+BE+hUusDQcraMaBT7gRurCufQn3NUacMa+yhT4
+        gHtZA864IVzIenDevioV+AG3sx6cd0k48sJw8O7qFfiAO1oejl8UDrUD3ECEkgU+4KZ2g9tICIH3hDuJ
+        ULXAD7gvPeCWomG6TrioCBZ4a7jPX+Hr+gGuLkjtAh9wa1IG2NI45Qv8gOuTJsJyhlqkwAdcojQLNjPU
+        OgV+wFVKg2Eho61W4AMuVBoGqzjAggV+wM1K0bCBYyxb4BNuWeoOKzfS+gV+wI1LvWDTBtulwA+4eukm
+        LNh4exX4AW8gXYO9mmLHAj/gMaR22KWJ9i3wn/A80g+wPHNZ4Be8kwRYmAws8NfwchI2JAkL/BM8ofaE
+        rUjFAr8B76rlYQESssAX4aW1GDx3Wha4A7y9SsPjJmeBQ2AnVAIesQQLPAIWRdngvQqxwBNgezQRnqYc
+        C5wL1ktxcPNFWeDUsHPqApdcmgUuBruoFrjDlVjg2rCpAlzXeizwarDBW8FV7MACbwTrvgaccTcWWB/Q
+        ijyQU2CBpcIssFSYBZYKs8BSYRZYKswCS4VZYKkwCywVZoGlwiywVJgFlgqzwFJhFlgqzAJLhVlgqTAL
+        LBVmgaXCLLBUmAWWCrPAUmEWWCrMAkuFWWCpMAssFWaBpcIssFSYBZYKs8BSYRZYKswCS4VZYKkwCywV
+        ZoGlwiywVJgFlgqzwFJhFlgqzAJLhVlgqTALLBVmgaXCLLBUmAWWCrPAUll//f1/PEFBNT8pwOUAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUAAAADwCAIAAAD+Tyo8AAAABGdBTUEAALGPC/xhBQAAAAd0SU1FB+gF
+        Ghc6DYP2HPUAAAAXdEVYdFNvZnR3YXJlAEdMRFBORyB2ZXIgMy40cYWk4QAAEKBJREFUeF7t2kGO9EgR
+        xXFuAbNibgBb1iDNijV34EbckEsgEVK0Xke/dKbTLpercuov/VRKhyPt6qx4+hDwh3/98U8AFkWAgYUR
+        YGBhBBhYGAEGFkaAgYURYGBhBBhYGAEGFkaAgYURYGBhBBhYGAEGFkaAgYURYGBhBBgX+8/f/3EJeyw2
+        EWBcyUJ4A/sCn4YA40qWrjdhX/L3hADjSpacd2bffFEEGFeykCzH/pz3R4BxGQvD74b9mW+FAOMaNvSf
+        wE7gJQgwLmCT/ZnsTO5BgPEom2MkO6UnIcB4iE0tRIdTj+tyBBjnaVjRo1Oq53YhAoyTNKMY01nV07sK
+        AcYZmk60/v2Xv+aiHpTWOsNLEGAcpqHs+e3Pv55mj1pFhLZVb6kz2Hk+ggDjsDqLclUI63N6bMtrKa4z
+        tMuO9DQCjGM0gi9keR6zvdeyfE7SdjvbEwgwDtDkhWdn4yo1zGI951gsD9FD7ISPIsCYpZlLV8VgOXkU
+        FsgT9LRHEGDMyoGrIsN/++WXZLd+3yyKp+mBdtTzCDBmxZwprqkG2Gg0211Xqa+4meUw5X84r6xhk55p
+        pz2JAGNWDJlFKGbUKi+nPIzZLrG2TZbAtJnYyRjnY+20JxFgzIohs3EPb5jhy2XAxOKXBkF9aoYJMA6I
+        IbPh/sAAi4Vw4HkZJsA4ICbMhvszA5xHYQk0cTI1t0/KMAHGMTFhNt+fmeFg8WtZaHczrCfbmQ8QYBwT
+        42XD/QkBDkqXWPw2ncuwnfkAAcZhMWF1sj8kwCHTJZa9nkMZ1sPtzHsIMA6L8bLJ/pAMK13JstdzKMAh
+        H25n3kOAcUZMmA33B2bYgjdwKMPx5DzheuA9BBhnxHjZZH9IgEOmN1n2Qi+c8xmOx+YJ1wPvIcA4KSas
+        jvXnBFg2Axw2w9kWxxnOTzvzFgHGSRbgQIZlJq4EGK9EgMN8gIMV47KXYT12N8MEGOeR4fBIhgfysQQY
+        z2UZ/swAb2aYAGMBFuDP9IwME2DchAyHzQCHNq6H/hHO462nbQgwHkWA0+MZtjoBxh0IcOoFOFgyjwZ4
+        kGECjAuQ4fRghjcDnMerozYEGNcgw6mX4TbAbYbbSkaXAOPpCLBMZths3iXAuA8ZTr0Ah0GGCTBe7LYA
+        //d//wxWfCsnMkyA8XpPzXDmVtF98xjHUWzGeDOovVTnQ4KdsxBgXClGzeb4Kr2svnOGw2SGewEOBBi3
+        ekaGxyl983+HLZAh4loTO0hvIMC421UZzmTu5nPFf4TDOLdCgHG3xwMcmVR6Vw9w2MzwfIDteCsCjOs9
+        EmBL7GQ43zzDmwGeRIDxAucybDm0MA+8eYDD6QwTYLzAiQC3IbwwwPmoTdb5POcyTIDxGocy3MYp15MB
+        U/Mh2muVJyHAWMlkgC05Wm8mKotidV2qMtDbVS8vdyLDBBgvkxmOz16YBxGyW73OrPdYZ15uruOzR52y
+        2zBwKMN5dHaqFQHGE+X8JZvjZNOvPOTiED2htz0b6t16qbtt0RryUrKiu7viKCylA3l0dqoVAcYT5fz1
+        ZAC0aGno61qyqM9kt2q9Xlbqb9W6+q25reyKP9mCuilPyY7UEGA8S85fsgkOOfSa/mzLy1xoVzaY7NQt
+        rWu9rvMyF7pV6/Vu1dulS1F9Rvx1FtdWnomdqiHAeJacv2CzG3Lc69znuopibo+1HqVKuyWfk1Spi3q3
+        VtrLVO+2C12qaJVd8YdYYqu4m2dYj7RFgPEUmbRgU5uUgboQNSRbn6Mn5EP0qF5Fl7pVK3lZqaEWx+Jw
+        LLSVDtAO1hBgXC8nz+ZV6qzHZ2V36yLXPdaZX6A2ZKWtGz0h2d2x7K/bx+KbWGglbuUx1lPdRIBxsQxJ
+        sHlNGnGbeF2mzQZbSxatR5e1Uuu20GWIL6/1pmyoWySK8+I5Ft2UBxjsbFsEGFfKmYtPm1TJEdeg29zX
+        y3Zti/isFV3WRd7tqQ22q35W2dbWRdlT51h0tunVSe4iwLiMJs9mVGzWN2Vbu0Vr1etd1XdvWcXqZnCr
+        lc35wDiEEzK9Us+2hwDjGjlw8ZkTbOqU18teMSttsV6m2rbZkGqbLmuxrsdsi+1ScZ4SW9WzHSDAuECd
+        PJvOOtnterOnVpLacqHLestksbbZpdRKXaiudZVt7V3VD6kHaGc7RoDxKM1cLGwuQzvfVjHaVT9naKMu
+        9VkXua6sQUVVpK2M5aNmKL1JZ7uLAONROXDxaUPZsvmW9lavOevjpyV16rNeVvWW7qqi+iRt13rSifQG
+        AoyHnEtvXlrxnPqQzQdGMdmlZDHv1gZd6nNGu30SAcbdDqU3P1tq0KXWvcrATHO+MVl9c31I+2RVxuIY
+        9b8hzSPAOOlQejXKdW13q8GttNvQqltObJ+UT64PV2UgjpEA41Y5c8Fm0eQEa443x1pFu2X1pFu9hiqb
+        a+fmLrVt3p23+RAVe/IY6/+LYx4Bxhk5czltubChtAnWpy0kK7VeL/V5rXzRM55c6S09cXqZXgKMO2Ri
+        c9RyYROpqa1zLPWWrXOxeSm9+oz6OjO4FR5/aU8eIAHGTXLgcs5yYRPZjq8+20uju6neejfjr1fv6s/Z
+        FAeo9BJgPF2GNtksJo2sxtfmuNegda3kpVjdLtueWp+81bb1jDvzbj68J86wppcA47kU3WCzGOrs5mVb
+        VEXr9rPe7V3aItdGt+bN7+p1Wj2/yaY8RgKMO+S0aWGzmDS++Wlq24Daaqcua1F13apqjxa61a6zx9Se
+        WrFLrXNRZcOmOEZLb8hDnkeAMaVNr01qqPVct5VcS1vMShbbu6K6NUverT2q1/Vmj+iWtdV1vWvU0NpM
+        byDAuN5MepPu5kJqj4wb6i2t83KS9tZiZc/UZVWb20VtaGVDq5feQIBxMaU3P3MEbUB12S603pWd+qxq
+        JZsP0d7edt1Smyr17sBmc66rOMBgoa3ynOcRYIzkwElOYTudeZn1gZmeR9QvM/l9Jjs3tRvr03Jt4gwt
+        sSYa7CcYI8AYydxqkVOY01lnNEfW6K411HqVtwadtaiey20+X8XNW/qscksVB2hx3ZQHPokAoytDq4UG
+        MaezDmtLzdXu3brebMv6Ob0nDB57+o35rioO0ILak2c+iQBjW4Y2hyk+6yzasIYs6rMucj1vZlftqevH
+        1ac98lg9J+QxWkoH8swnEWBsy7HLRR3HVMc0F1mpxYHsabVt9XOTOnWpYqu2PW7zOXpFyDMMFtGxPPZJ
+        BBgbNHmhTqTUedVaFWuwiuiWWMMjJp9W37u7pTar0q5jUQ8wWETHot9+jgECjC91bjR5Iae21Q7u5nrQ
+        3GqbrbLr0PbNZtGtgdpW9+r08jAtoq3f/vxrvcyNMwgwvmhocvJCnchNml3TNqhSiz3qqVvqRtVFRfVs
+        tlXWaYtcW5uKbT1kXadX1XBuigDXDMcW/S5jBBhf6sAFTeoMjW+lsba7uqwLqZebd1XJdV5qnZdS65tq
+        s7Q9+qxFE0U7Q1EyBwgwHlVn7nE50+2410s1WFGfqljPWG3W3h7tUrPtqg2b7A+v8lSVzAECjIdo5i7R
+        G+s6963Nhpolsc6ZJw+oQc2DXXlr0FDlwSqZoQa1t86NMwgwvmjmrjIYcQVgl22U3Qaj/nZLW+x1nqZk
+        BgKMp6gDd5VeEubjYU+wy3P0kMcfNU/hJMB4ijptl3s8M6c3vgMlMxBgPEUdOFxLyQwzAQ6xy36gTQQY
+        X+rA4Vo1mQQYT1EHDo+rR1qTaUHtZTifsIsA44umrYqRssoni9Oo7K6pR6pYpti7u84n7CLA+KJpq3bH
+        9Pcq/vBW21ArA4plio2769hlP9AmAowvdeBkfkaXFn+msYZNk21BsUyxcXcdu+wH2kSA8aUOnMRIid26
+        2eVfQw88/cz5jYplio2769hlP9AmAowvdeCkzmisW7r7bI+/UU948Dky/xDFMsXG3XWIjfYbtQgwvtSB
+        k90ZjYZL2GPNuNnuDtjGB+0+UKdaYxli4+465BPGCDC+5KiZy4e+J15Uzd9tK7fZfa9OtcYyxMbddcgn
+        jBFgfMlRMy/JxuZLoyjtLavcY/e9OtUayxAbd9chnzBGgPEtp626Pxu9N0Y9WT306s82/9IayxAbd9ch
+        NtoP1CLA+FZnLt0cjHjd4I3jWzd/1TD/xhrLEBs3L60eG+0HahFgfKszJ3cGY/yu3bt3ftUw/7oayxAb
+        Ny+tHhvtB2oRYHyrMye3pSJeNH7X7je57aum+dfVWKbY265rMcRG+4FaBBjf6szJbanYfdHMN7nt24ZD
+        76rJDLG3XddiiF32A7UIML7VgZPbIrH7oplvctu3DYfeVZMZYm+7rsUQu+wHahFgfKsDJ7dFYvdFM9/k
+        tm8bDr2rJjPE3nZdiyF22Q/UIsD4VgdObotEvOjxd932bcOhd9VkhtjbrmsxxC77gVoEGN/qwFW3pSJe
+        JHZrxumNp82/riYzxMZ2XYshdtkP1CLA+FYHrro5FSHeKHZr4CXf0yo9NZkhNrbrWgyxy36gFgHGtzpw
+        1f3BqOLtld1Ng1tPNf/SmswQG60SrJgb7TcyBBjfNG3mJdnYFN9kk7XdZubVebA1mSE2WqWl7QMEGN9y
+        YlovTMibmz8ZC+d8gIP9TBUBxg8amooA9xBgvBcNTUWAewgw3ouGpiLAA+cyTIDxFBoaQ4Z7nhRg7bIf
+        yBBg/KC5MQS456kBtl+nRYDxg6bNEOCeJwU4xBb7dVoEGD/UgasIcM+5AM+ILfbrtAgwfqgDVxHgnsmT
+        ybO1iA7kll0EGD9o4AwB7jl0MpbSgWi2n2YTAcYPddoqAtxDgPFG6rRVBHhg/nAspT3Rab9LDwHGD3Xa
+        KgI8QIDxLuq0VQR4gADjXdRpqwjwwLUBjjb7UQYIMH6o01YR4IHJw8njtbi2snMSAcYPmjZDgMdmzieP
+        1+Lays5JBBhOA1cR4LGrApxt8wgwnAauIsBj8+djiTXRYD/HGAGGq9MmBHiMAONd1GmTzwlw/KVitwbm
+        my2xJhrs5xgjwHB12uTQNC9BKTXWNmlyYx6vhVay4RACDKdpW07N4S7b+6DJB+bxWm4lGw4hwHCathk1
+        Ei9n3+1Ok2/P47XcSjYcQoDhNG0zXhub9zFzDjpby61kzyEEGC6HDEftZlhna7lN2XAUAYbLIcNRBBhv
+        IYcMRz0S4Lx7AgGGyyHDUfP/dYClN0TRfoVJBBiujhrmEWC8hTpqmDSZ3jzeq9IbCDCcpg3zDgU4XJLe
+        QIDxrU4YnkHHq/Sqfg4BxrecJE3VM9TXPZu9+h3Yt9KlvvNRBBhfNFWV9XwCO4Eb2Bc4hADjy+PD9AmU
+        unntdntObTiKAAO3uiq6iQADr0GAgU9HgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBg
+        YQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBg
+        YQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBg
+        YQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBg
+        YQQYWBgBBhZGgIGFEWBgYQQYWBgBBhZGgIGFEWBgYQQYWBgBBpb1xz/9HxybKx1aVpO9AAAAAElFTkSu
+        QmCC
+</value>
+  </data>
 </root>
